--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -3,7 +3,7 @@
     document.addEventListener("DOMContentLoaded", function() {
       // Replace ::shortcode:: with <img> tags
       function replaceCustomEmojis() {
-        const emojiDir = "/assets/images/emoji/"; // Path to your emoji directory
+        const emojiDir = "assets/images/emoji/"; // Path to your emoji directory
         const body = document.body;
         const regex = /:([a-zA-Z0-9_+-]+):/g; // Match ::shortcode::
     
